--- a/FavoritePhotos/Base.lproj/Main.storyboard
+++ b/FavoritePhotos/Base.lproj/Main.storyboard
@@ -68,6 +68,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="favoritesCollectionView" destination="duM-Gb-Hvy" id="kh6-7C-tEM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
